# UAP-MachineLearning

./: LICENSE  README.md  UAPMachineLearning.ipynb
UAPML/: pyproject.toml
UAPML/src/code/: app.py  cnn.py  vgg19.py
