[project]
name = "uap"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Akhtarazizi", email = "akhtarazizifarid@gmail.com"},
]
dependencies = ["streamlit>=1.41.1", "tensorflow>=2.18.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
